Core, Spark: Address review feedback on rewrite_table_path manifest length
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Generated-by: Claude Code